--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -3,19 +3,27 @@ body {
 	font-size: 16px;
 	font-family: sans-serif;
 	box-sizing: border-box;
-	padding: 30px 0;
+	padding: 30px 30px;
 	margin: 0;
+	height: 100vh;
+	max-height: 100vh;
+	width: 100vw;
+	max-width: 100vw;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	overflow: hidden;
 }
 
 .card {
 	background-color: #CCCCCC;
 	border: 1px solid #555555;
 	height: 200px;
-	width: 200px;
+	width: 100%;
 	padding: 5px;
 	position: relative;
 	box-shadow: 0 0 10px #000000;
-	margin: 0 5px;
+	margin: 0 10px;
 }
 
 div#cardContainer {
@@ -39,4 +47,14 @@ div#cardContainer {
 .cardName {
 	text-align: center;
 	color: #555555;
+}
+
+#chartContainer {
+	background-color: #CCCCCC;
+	border: 1px solid #555555;
+	padding: 5px;
+	box-shadow: 0 0 10px #000000;
+	margin: 20px 0;
+	height: 100%;
+	max-height: 450px;
 }
